--- a/employee-service.properties
+++ b/employee-service.properties
@@ -7,3 +7,5 @@ server.port=8081
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.boot.message= Helloe, employee service
