--- a/department-service.properties
+++ b/department-service.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.boot.message=Hello , spring cloud bus demo
