--- a/employee-service.properties
+++ b/employee-service.properties
@@ -8,4 +8,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message= Helloe, employee service
+spring.boot.message= Helloe, employee service spring cloud bus demo
