Update spring.boot.message for testing purposes

--- a/department-service.properties
+++ b/department-service.properties
@@ -7,4 +7,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message=Hello , spring cloud bus demo
+spring.boot.message=Hello , spring cloud bus demo testing agan
